--- a/html/ss/css/output/patterns/08-feedback.css
+++ b/html/ss/css/output/patterns/08-feedback.css
@@ -24,8 +24,8 @@
   background-color: #F8826F; }
 
 .feedback {
-  background-color: #bff8ed;
-  border-bottom: 0.2em solid #9af4e3;
+  background-color: #5dd9ff;
+  border-bottom: 0.2em solid #00bbf4;
   font-weight: 500;
   padding: 0.8em 1.4em;
   margin: 0 0 1.5em 0; }
