--- a/html/ss/css/output/patterns/07-form-fields.css
+++ b/html/ss/css/output/patterns/07-form-fields.css
@@ -86,7 +86,7 @@ textarea {
   margin-bottom: 1em; }
 
 input[type="email"]:focus, input[type="number"]:focus, input[type="search"]:focus, input[type="text"]:focus, input[type="tel"]:focus, input[type="url"]:focus, input[type="password"]:focus, input[list]:focus, textarea:focus, select:focus {
-  border: 0.2em solid #008FBB;
+  border: 0.2em solid #F8826F;
   outline: 0; }
 
 label, legend {
