--- a/html/ss/css/sass/_4-colours.scss
+++ b/html/ss/css/sass/_4-colours.scss
@@ -50,7 +50,7 @@ $contrast-alt: #5AA641; // WCAG 2 AA Compliant (18pt+)
 
 $contrast-alt-light: #83BF52; // Don't use for text
 
-$feedback: #bff8ed;
+$feedback: scale-color($contrast, $lightness: 50%);
 
 $error: #ffcdb3;
 
