--- a/html/ss/css/sass/patterns/07-form-fields.scss
+++ b/html/ss/css/sass/patterns/07-form-fields.scss
@@ -143,7 +143,7 @@ input[type="password"]:focus,
 input[list]:focus,
 textarea:focus,
 select:focus {
-  border: 0.2em solid $contrast;
+  border: 0.2em solid $light-pastel;
   outline: 0; 
 }
 
