--- a/html/mie/css/output/patterns/07-form-fields.css
+++ b/html/mie/css/output/patterns/07-form-fields.css
@@ -12,23 +12,23 @@
   background-color: #222121; }
 
 .bg--dark {
-  background-color: #5C261B; }
+  background-color: #140431; }
 
 .bg--mid {
-  background-color: #8A2C1E; }
+  background-color: #412773; }
 
 .bg--light {
-  background-color: #C8412A; }
+  background-color: #B088BC; }
 
 .bg--light-pastel {
-  background-color: #F8826F; }
+  background-color: #D8ADE5; }
 
 /* Forms */
 form {
   display: inline-block;
   width: 100%;
   max-width: 36em;
-  background-color: #5C261B;
+  background-color: #140431;
   padding: 1em 1em 0em 1em;
   margin: 1.5em 0 2em 0; }
 
@@ -50,7 +50,7 @@ input[type="email"], input[type="number"], input[type="search"], input[type="tex
   /* ^ The 0.375em vertically centers text on FF, 
   ignored by Webkit */
   background-color: #fff;
-  border: 0.2em solid #5C261B;
+  border: 0.2em solid #140431;
   box-shadow: none;
   -webkit-appearance: none;
   border-radius: 0; }
@@ -63,7 +63,7 @@ input[type="email"], input[type="number"], input[type="search"], input[type="tex
   .form-item input[type="email"], .form-item input[type="number"], .form-item input[type="search"], .form-item input[type="text"], .form-item input[type="tel"], .form-item input[type="url"], .form-item input[type="password"], .form-item input[list], .form-item input[type="file"], .form-item input[type="date"], .form-item input[type="month"], .form-item input[type="week"], .form-item input[type="time"], .form-item input[type="range"], .form-item input[type="search"], .form-item textarea, .form-item select {
     margin-bottom: 0.5em; }
   .form-item .description {
-    color: #F8826F;
+    color: #D8ADE5;
     font-size: 1em; }
 
 .checkbox {
@@ -86,7 +86,7 @@ textarea {
   margin-bottom: 1em; }
 
 input[type="email"]:focus, input[type="number"]:focus, input[type="search"]:focus, input[type="text"]:focus, input[type="tel"]:focus, input[type="url"]:focus, input[type="password"]:focus, input[list]:focus, textarea:focus, select:focus {
-  border: 0.2em solid #F8826F;
+  border: 0.2em solid #D8ADE5;
   outline: 0; }
 
 label, legend {
@@ -113,7 +113,7 @@ input[type="radio"] {
   margin: 0 0.5em 0.5em 0; }
 
 input[type="file"] {
-  background-color: #2e130e;
+  background-color: #0a0219;
   color: #ffffff; }
 
 .form-required {
@@ -123,7 +123,7 @@ input[type="file"] {
 .format {
   font-weight: 300;
   font-style: italic;
-  color: #F8826F;
+  color: #D8ADE5;
   margin-left: 0.75em; }
 
 input[type="search"] {
@@ -140,7 +140,7 @@ textarea[disabled]:hover, input[disabled]:hover, select[disabled]:hover {
   cursor: not-allowed; }
 
 select:-internal-list-box option:checked {
-  background-color: #C8412A; }
+  background-color: #B088BC; }
 
 .messages {
   background-image: none !important;
