--- a/html/mie/css/sass/_6-guide.scss
+++ b/html/mie/css/sass/_6-guide.scss
@@ -302,6 +302,10 @@ pre {
   background-color: $mid;
 }
 
+.swatches span.link-text {
+  background-color: $link-text;
+}
+
 .swatches span.mid-text {
   background-color: $mid-text;
 }
