--- a/html/mie/css/output/patterns/0-footer.css
+++ b/html/mie/css/output/patterns/0-footer.css
@@ -12,19 +12,19 @@
   background-color: #222121; }
 
 .bg--dark {
-  background-color: #5C261B; }
+  background-color: #140431; }
 
 .bg--mid {
-  background-color: #8A2C1E; }
+  background-color: #412773; }
 
 .bg--light {
-  background-color: #C8412A; }
+  background-color: #B088BC; }
 
 .bg--light-pastel {
-  background-color: #F8826F; }
+  background-color: #D8ADE5; }
 
 .footer__top {
-  background-color: #8A2C1E;
+  background-color: #412773;
   padding: 2em 8% 1.5em 8%; }
 
 .footer__top__report-issues, .footer__top__twitter {
@@ -77,7 +77,7 @@
   height: 5.8125em; }
 
 .footer__nav {
-  background-color: #79271a;
+  background-color: #392265;
   padding: 1.5em 8% 0.5em 8%;
   text-align: center; }
 
@@ -92,7 +92,7 @@
     border-bottom: 0.1em dotted #ffffff; }
 
 footer {
-  background-color: #5C261B;
+  background-color: #140431;
   padding: 2.4em 8% 3.5em 8%;
   text-align: center; }
 
