--- a/html/mie/css/output/patterns/06-list-of-items.css
+++ b/html/mie/css/output/patterns/06-list-of-items.css
@@ -13,16 +13,16 @@
   background-color: #222121; }
 
 .bg--dark {
-  background-color: #5C261B; }
+  background-color: #140431; }
 
 .bg--mid {
-  background-color: #8A2C1E; }
+  background-color: #412773; }
 
 .bg--light {
-  background-color: #C8412A; }
+  background-color: #B088BC; }
 
 .bg--light-pastel {
-  background-color: #F8826F; }
+  background-color: #D8ADE5; }
 
 .items {
   margin: 0 0 3em 0; }
